fix: :bug: fixed title covering logo link bug
Added pointer-events: none; to title, so as to not cover nav links (when viewport width greater than or equal to 900px).

--- a/public/about.css
+++ b/public/about.css
@@ -13,7 +13,7 @@ body {
 }
 
 /* Components */
-.brand-name {
+.brand_name {
   font-family: 'Times New Roman', Times, serif;
   font-size: larger;
 }
